# ascii-pay-nfc-terminal

./: .env  .gitignore  Cargo.toml  Dockerfile  ascii-pay-authentication-proxy.service  ascii-pay-nfc-terminal.service  build.rs  derivation.nix  flake.nix  install.sh  smartcard_list.txt  update_smartcard_list.sh
.github/workflows/: rust.yml
client/: ascii-pay-authentication-client.ts
src/: application.rs  demo_module.rs  env.rs  errors.rs  http_client.rs  lib.rs  main.rs  nfc_reader.rs  proxy.rs  qr_module.rs  qr_scanner.rs  sse.rs  status.rs  utils.rs  websocket_server.rs
src/nfc/: mifare_desfire.rs  mifare_desfire_card.rs  mifare_utils.rs  mod.rs  utils.rs
src/nfc_module/: generic_nfc_handler.rs  iso_14443_handler.rs  mifare_classic.rs  mifare_classic_handler.rs  mifare_desfire.rs  mifare_desfire_handler.rs  mod.rs  nfc_card_handler.rs  nfc_reader.rs  unsupported_card_handler.rs
src/nfc_module/nfc/: iso_14443_card.rs  mifare_desfire.rs  mifare_desfire_card.rs  mifare_desfire_simulation.rs  mifare_utils.rs  mod.rs  nfc_card.rs  simulation_card.rs  utils.rs
src/qr_module/: mod.rs  qr_scanner.rs
src/web/: http_client.rs  mod.rs  proxy.rs  sse.rs
