[package]
name = "ascii-pay-nfc-terminal"
version = "0.1.0"
authors = ["Lars Westermann <lars-westermann@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.11", features=["full"] }
log = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tokio-tungstenite = "0.15"
uuid = {version = "0.8", features = ["serde", "v4"]}

dotenv = "0.15"
futures = "0.3.5"
url = "1.7"
env_logger = "0.9"
byteorder = "1.3"
des = "0.3"
hex-literal = "0.3"
generic-array = "0.12"
rand_core = "0.5"
rand = "0.7"
block-modes = "0.3"
lazy_static = "1.3"
derive_more = "0.15"
base64 = "0.11"
pcsc = "2.6"
shadow-rs = "0.7"
pnet = "0.28.0"

threadpool = "0.1"
grpcio = "0.9"
protobuf = "2.25"

[target.'cfg(target_os="linux")'.dependencies]
evdev-rs = "0.5"

[build-dependencies]
protoc-grpcio = "3.0"
shadow-rs = "0.7"
