[package]
name = "ascii-pay-nfc-terminal"
version = "0.1.0"
authors = ["Lars Westermann <lars-westermann@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.15", features=["full"] }
log = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tokio-tungstenite = "0.16"
uuid = {version = "0.8", features = ["serde", "v4"]}

dotenv = "0.15"
futures = "0.3.19"
url = "2.2"
env_logger = "0.9"
byteorder = "1.4"
block-modes = "0.8"
des = "0.7"
hex-literal = "0.3"
generic-array = "0.14"
rand_core = "0.6"
rand = "0.8"
lazy_static = "1.4"
derive_more = "0.99"
base64 = "0.13"
pcsc = "2.6"
shadow-rs = "0.8"
pnet = "0.29"

grpcio = "0.9"
protobuf = "2.25"

[target.'cfg(target_os="linux")'.dependencies]
evdev-rs = "0.5"

[build-dependencies]
protoc-grpcio = "3.0"
shadow-rs = "0.8"
