[package]
name = "ascii-pay-nfc-terminal"
version = "2.0.0"
authors = ["Lars Westermann <lars-westermann@live.de>"]
edition = "2021"

[[bin]]
name = "ascii-pay-server"
path = "src/main.rs"

[dependencies]
tokio =  { version = "1.25.0", features=["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version="1.0.91" }
base64 = { version="0.21.0" }

tokio-tungstenite = "0.18.0"

block-modes = "0.8"
des = "0.7"
aes = "0.7"
generic-array = "0.14.6"
hex-literal = "0.3.4"
rand = "0.8.5"
futures = { version = "0.3.26" }
byteorder = "1.4.3"

dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"

pcsc = "2.8.0"

[target.'cfg(target_os="linux")'.dependencies]
evdev-rs = "0.6.1"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = "z"
